--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -34,7 +34,12 @@ $colour-map: ( // Creates variables to be used in my map.
   nav-training-dd           : #A3331D,
   banner-txt                : #FFF,
   banner-dot                : #FFF,
-  banner-btn-hvr            : #E80A42,
+  banner-btn-software-hvr   : #E8A008, 
+  banner-btn-it-hvr         : #2A6EC6,
+  banner-btn-digital-hvr    : #26AB5F,
+  banner-btn-training-hvr   : #C42E2A,
+  banner-btn-web-hvr        : #7E57A0,
+  banner-btn-security-hvr   : #E80A42,
   os-btn-txt                : #FFF,
   os-hov-effect             : #FFF,
   os-icon                   : #FFF,
